<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.activity.ChangePassword">
    <TextView
        android:id="@+id/change_password_username"
        android:layout_width="wrap_content"
        android:text="@string/register_username_text"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/change_password_old_password"
        android:hint="@string/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/change_password_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:text="@string/new_password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/change_password_new_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:text="@string/confirm_new_password"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/change_password_button"
        android:text="@string/modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>