<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.activity.settings.MainSetting">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_about_app"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:text="@string/about_app"
            android:id="@+id/setting_about_title"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/share_app"
            android:id="@+id/setting_share"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_share_25" />
        <TextView
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/share_via_qr"
            android:id="@+id/setting_share_with_qr"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/ic_baseline_qr_code_scanner_25" />
        <TextView
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/details"
             android:id="@+id/setting_overview"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_details_25" />
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/setting_version_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/app_version"
            android:id="@+id/setting_version_label"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_phone_android_25" />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:text="@string/x_y"
                android:id="@+id/setting_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/user_guide"
            android:id="@+id/setting_docs"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/setting_cache_label"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/clear_cache"
            android:id="@+id/setting_clear_cache"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_delete_sweep_25" />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:text="@string/size"
                android:id="@+id/setting_cache_size"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_about_establishment"
        android:orientation="vertical"
        >
        <TextView
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:text="@string/about_est"
            android:id="@+id/setting_establishment"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/setting_name_layout"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/nom"
            android:id="@+id/setting_name_label"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_mode_edit_25" />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:id="@+id/setting_name"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/setting_mail_layout"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/register_mail_address_text"
            android:id="@+id/setting_mail_label"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_alternate_email_25" />

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:text=""
                android:id="@+id/setting_mail"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/picture"
            android:id="@+id/setting_picture"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_picture_in_picture_25" />
        <LinearLayout
            android:id="@+id/setting_description_layout"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/description"
            android:id="@+id/setting_description_label"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_description_25" />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:text=""
                android:id="@+id/setting_description"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
             android:textSize="20sp"
            android:layout_width="wrap_content"
            android:text="@string/set"
            android:id="@+id/setting_account"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:id="@+id/setting_services"
            android:text="@string/service_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_others_layout"
        android:orientation="vertical"
        >
        <TextView
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:text="@string/more_parameters"
            android:id="@+id/setting_other_label"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/attendance_gesture"
            android:id="@+id/setting_attendance"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_timer_25" />
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/dark"
            android:id="@+id/setting_dark"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_dark_mode_25" />
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/languages"
            android:id="@+id/setting_languages"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_language_25" />
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/report_problem"
            android:id="@+id/setting_problem"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_report_problem_25" />
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/help"
            android:id="@+id/setting_help"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_help_outline_25" />

         </LinearLayout>
    </LinearLayout>

</ScrollView>