<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.activity.SetUp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks"/>
    <ImageView
        android:src="@drawable/ic_baseline_fingerprint_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />
    <Button
        android:id="@+id/set_up_continue"
        android:text="@string/contin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>