<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.activity.settings.SimpleEmployeeSettings">


            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:text="@string/my_account"
                android:id="@+id/setting_my_account"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_baseline_manage_accounts_25" />
            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/setting_my_account"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:text="@string/personal_informations"
                android:id="@+id/setting_personal_infos"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_baseline_person_25" />
        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_personal_infos"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:text="@string/user_guide"
            android:id="@+id/setting_docs"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_menu_book_25" />
            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/setting_docs"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:text="@string/dark"
                android:id="@+id/setting_dark"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_baseline_dark_mode_25" />
            <TextView
                app:layout_constraintTop_toBottomOf="@+id/setting_dark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:text="@string/languages"
                android:id="@+id/setting_languages"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_baseline_language_25" />
            <TextView
                app:layout_constraintTop_toBottomOf="@+id/setting_languages"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:text="@string/report_problem"
                android:id="@+id/setting_problem"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_baseline_report_problem_25" />
            <TextView
                app:layout_constraintTop_toBottomOf="@+id/setting_problem"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:text="@string/help"
                android:id="@+id/setting_help"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_baseline_help_outline_25" />

</androidx.constraintlayout.widget.ConstraintLayout>